# side-boat

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deploy.yaml
.github/workflows/: rust.yml
src/: main.rs
src/net/: client.rs
src/proto/: msg.proto
src/protos/msg/: msg.proto
