[package]
name = "side-boat"
version = "0.1.0"
authors = ["Daniel McCrevan <danielmccrevan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.33.0"
kube-derive = "0.33.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.1.6"
grpcio = { version = "0.5.1", features = ["openssl"] }
protobuf = "~2"
log = "0.4"

[build-dependencies]
protoc-grpcio = "1.2.0"